# hippo

./: .cspell.json  .dockerignore  .env.example  .gitignore  .vercelignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER-FILES-SUMMARY.md  DOCKER.md  DOCUMENTATION_SETUP.md  Dockerfile  Dockerfile.web  FILES_CREATED.md  FIX_SUMMARY.md  LICENSE  MOBILE_CONFIGURATION_SUMMARY.md  MOBILE_FILES_OVERVIEW.txt  MOBILE_POST_INIT_STEPS.md  MOBILE_QUICKSTART.md  Makefile  PARALLEL_WORK_PLAN.md  PDF_THUMBNAIL_IMPLEMENTATION.md  QUICKSTART-DOCKER.md  README.md  README_WORKFLOW_FIX.md  RELEASE_WORKFLOW_FIXES.md  ROADMAP.md  VERCEL-QUICKSTART.md  VERCEL-SETUP-SUMMARY.md  WORKFLOW_DIAGRAM.md  WORKFLOW_FIX_CHECKLIST.md  crates.js  deny.toml  docker-compose.dev.yml  (+8 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  RELEASE_GUIDE.md  WORKFLOWS_COMPLETE.md  WORKFLOW_SUMMARY.md  markdown-link-check-config.json
demo/: .gitkeep  DEPLOY-CHECKLIST.md  QUICKSTART.md  README.md  hippo-api-wrapper.js  index.html  serve.sh
docs/: BRAND_GUIDE.md  CLI_TUTORIAL.md  FEATURES.md  Gemfile  MOBILE_APP.md  README.md  _config.yml  api.md  architecture.md  cli-guide.md  contributing.md  desktop-app.md  index.md  installation.md
hippo/: all.html  constant.HIPPO_ART.html  constant.HIPPO_TAGLINE.html  enum.Commands.html  fn.format_bytes.html  fn.format_bytes_colored.html  fn.format_tags.html  fn.get_kind_icon.html  fn.get_kind_string.html  fn.main.html  fn.print_error.html  fn.print_header.html  fn.print_hippo.html  fn.print_info.html  fn.print_memory_card.html  fn.print_success.html  index.html  sidebar-items.js  struct.Cli.html  struct.MemoryRow.html  struct.SourceRow.html
hippo-cli/: Cargo.toml  Makefile  QUICK_TEST_REFERENCE.md  TESTING.md  TEST_SUITE_SUMMARY.md  run_tests.sh
hippo-cli/src/: main.rs
hippo-cli/src/tui/: mod.rs  widgets.rs
hippo-cli/tests/: README.md  cli_tests.rs  test_structure.md
hippo-core/: Cargo.toml
hippo-core/benches/: ai_tagging_benchmark.rs
hippo-core/src/: error.rs  lib.rs  models.rs
hippo-core/src/ai/: analysis.rs  mod.rs
hippo-core/src/duplicates/: mod.rs
hippo-core/src/embeddings/: mod.rs
hippo-core/src/graph/: mod.rs
hippo-core/src/indexer/: code_parser.rs  extractors.rs  mod.rs
hippo-core/src/ollama/: mod.rs
hippo-core/src/organization/: mod.rs
hippo-core/src/qdrant/: manager.rs  mod.rs
hippo-core/src/scheduler/: mod.rs
hippo-core/src/search/: advanced_filter.rs  mod.rs
hippo-core/src/sources/: mod.rs
hippo-core/src/storage/: mod.rs
hippo-core/src/thumbnails/: mod.rs
hippo-core/src/watcher/: mod.rs
hippo-core/tests/: AI_TESTS_README.md  advanced_filter_tests.rs  ai_advanced_tests.rs  ai_tests.rs  fuzzy_search_tests.rs  indexing_tests.rs  integration_tests.rs  metadata_extraction_tests.rs  semantic_search_tests.rs  source_management_tests.rs  tag_management_tests.rs  thumbnail_tests.rs
hippo-tauri/: AndroidManifest.xml.additions  Cargo.toml  Info.plist.additions  MOBILE_ICONS.md  MOBILE_README.md  MOBILE_SETUP.md  android-file-paths.xml  tauri.conf.json
hippo-tauri/capabilities/: default.json  mobile.json
hippo-tauri/icons/: icon.icns
hippo-tauri/src/: main.rs  streaming_commands.rs
hippo-tauri/ui/: index.html  package.json  vite.config.js
hippo-tauri/ui/src/: App.jsx  index.css
hippo-wasm/: .gitignore  CHECKLIST.md  Cargo.toml  FILE_STRUCTURE.md  INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  VERIFICATION.md  build-wasm.sh  example.html
hippo-wasm/src/: lib.rs
hippo-wasm/tests/: wasm_tests.rs
hippo-web/: .env.example  .gitignore  API_REFERENCE.md  Cargo.toml  Dockerfile  FRONTEND.md  QUICKSTART.md  README.md  docker-compose.yml
hippo-web/examples/: client.py  client.sh
hippo-web/src/: main.rs
hippo-web/static/: INDEX.md  PWA_IMPLEMENTATION_SUMMARY.md  PWA_QUICKREF.md  PWA_README.md  SETUP.md  browserconfig.xml  index.html  manifest.json  offline.html  pwa-test.html  pwa-utils.js  sw.js  verify-pwa.sh
hippo-web/static/icons/: README.md  generate-icons.sh
hippo-web/tests/: api_tests.rs
hippo_core/: all.html  index.html  sidebar-items.js  struct.Hippo.html  struct.HippoConfig.html
hippo_tauri/: all.html  fn.add_search_history.html  fn.add_source.html  fn.add_source_path.html  fn.add_tag.html  fn.add_to_collection.html  fn.ai_find_similar.html  fn.ai_smart_rename.html  fn.ai_suggest_tags.html  fn.analyze_code_deep.html  fn.analyze_document_deep.html  fn.analyze_file.html  fn.analyze_image_deep.html  fn.batch_rename.html  fn.bulk_add_tag.html  fn.bulk_delete.html  fn.caption_image.html  fn.clear_search_history.html  fn.clear_thumbnail_cache.html  fn.cosine_similarity.html  fn.create_collection.html  fn.deep_analyze_file.html  fn.delete_saved_search.html  fn.discover_collections.html  fn.export_index.html  fn.export_to_file.html  fn.find_similar_memories.html  fn.format_bytes.html  fn.get_collections_for_memory.html  fn.get_duplicate_suggestions.html  fn.get_indexing_progress.html  fn.get_mind_map.html  fn.get_organization_stats_internal.html  fn.get_organization_suggestions.html  fn.get_organization_suggestions_for_memory.html  fn.get_qdrant_stats.html  fn.get_qdrant_status.html  fn.get_recent_files.html  fn.get_recently_modified.html  fn.get_recommended_models.html  (+65 more)
hippo_wasm/: all.html  fn.filter_by_type.html  fn.fuzzy_match.html  fn.get_stats.html  fn.init.html  fn.search_local.html  fn.semantic_score.html  fn.sort_memories.html  fn.version.html  index.html  sidebar-items.js  struct.WasmHighlight.html  struct.WasmMemory.html  struct.WasmSearchResult.html
hippo_web/: all.html  enum.ApiError.html  fn.add_source.html  fn.add_tag.html  fn.get_memory.html  fn.get_stats.html  fn.get_thumbnail.html  fn.health_check.html  fn.list_sources.html  fn.list_tags.html  fn.main.html  fn.remove_source.html  fn.remove_tag.html  fn.search_memories.html  index.html  sidebar-items.js  struct.AddSourceRequest.html  struct.AddTagRequest.html  struct.AppState.html  (+3 more)
(+901 files in other folders)
