[package]
name = "hippo-tauri"
version = "1.2.0"
edition = "2021"
description = "Hippo desktop app - The memory that never forgets"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
hippo-core = { path = "../hippo-core" }
tauri = { version = "2.1", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
uuid = { version = "1.10", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Mobile-specific features
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-barcode-scanner = "2"
